--- a/odg.tex
+++ b/odg.tex
@@ -1,4 +1,4 @@
- % !TEX encoding = UTF-8 Unicode
+% !TEX encoding = UTF-8 Unicode
 
 \documentclass[a4paper]{report}
 
@@ -24,25 +24,7 @@ jezici za kvantno programiranje)\\ \small{Aleksandar Ćurković, Nemanja Šekula
 \maketitle
 \tableofcontents
 
-
-\chapter{Uputstva}
-\emph{Prilikom redavanja odgovora na recenziju, obrišite ovo poglavlje.}
-
-Neophodno je odgovoriti na sve zamerke koje su navedene u okviru recenzija. Svaki odgovor pišete u okviru okruženja \verb"\odgovor", \odgovor{kako bi vaši odgovori bili lakše uočljivi.} 
-\begin{enumerate}
-
-\item Odgovor treba da sadrži na koji način ste izmenili rad da bi adresirali problem koji je recenzent naveo. Na primer, to može biti neka dodata rečenica ili dodat pasus. Ukoliko je u pitanju kraći tekst onda ga možete navesti direktno u ovom dokumentu, ukoliko je u pitanju duži tekst, onda navedete samo na kojoj strani i gde tačno se taj novi tekst nalazi. Ukoliko je izmenjeno ime nekog poglavlja, navedite na koji način je izmenjeno, i slično, u zavisnosti od izmena koje ste napravili. 
-
-\item Ukoliko ništa niste izmenili povodom neke zamerke, detaljno obrazložite zašto zahtev recenzenta nije uvažen.
-
-\item Ukoliko ste napravili i neke izmene koje recenzenti nisu tražili, njih navedite u poslednjem poglavlju tj u poglavlju Dodatne izmene.
-\end{enumerate}
-
-Za svakog recenzenta dodajte ocenu od 1 do 5 koja označava koliko vam je recenzija bila korisna, odnosno koliko vam je pomogla da unapredite rad. Ocena 1 označava da vam recenzija nije bila korisna, ocena 5 označava da vam je recenzija bila veoma korisna. 
-
-NAPOMENA: Recenzije ce biti ocenjene nezavisno od vaših ocena. Na osnovu recenzije ja znam da li je ona korisna ili ne, pa na taj način vama idu negativni poeni ukoliko kažete da je korisno nešto što nije korisno. Vašim kolegama šteti da kažete da im je recenzija korisna jer će misliti da su je dobro uradili, iako to zapravo nisu. Isto važi i na drugu stranu, tj nemojte reći da nije korisno ono što jeste korisno. Prema tome, trudite se da budete objektivni. 
-
-\chapter{Prvi recenzent \odgovor{--- ocena: 3} }
+\chapter{Prvi recenzent \odgovor{--- ocena: 4} }
 
 \section{O čemu rad govori?}
 Rad govori o osnovnim konceptima kvantnog računarstva. Objašnjava pojmove kao što su kjubit koji počiva na principu superpozicije, kvantni paralelizam, kvantno kolo i model kvantnog računara. Opisane su glavne karakteristike funkcionalnih jezika u kvantnom računarstvu na primeru jezika Quipper koji podržava simulaciju na klasičnom računaru.
@@ -56,6 +38,7 @@ Zaključak bi trebalo da se preradi jer govori o tome šta je urađeno u radu a 
 \odgovor {Slažemo se s ovom ocenom, tako da smo zaključak dopunili: 
 \say{S obzirom na to da klasični računari koji počivaju na tranzistorima dostižu fizičke granice svog daljnjeg razvitka, kvantni računari u ovom trenutku deluju kao jedan od najvažnijih budućih pravaca razvoja računarstva, uprkos velikim teškoćama na koje taj razvoj nailazi (među najvećima- izolovanost kvantnog računara od spoljnog sveta).}}
 Na mnogim mestima paragrafi sadrže samo jednu rečenicu. Potrebno je restrukturiranje paragrafa u smislenije celine. \\
+\odgovor{Izvršeno restruktuiranje pojedinih paragrafa koji su bili nepotrebno fragmentisani, tamo gde, po našem mišljenju, samostalna rečeni ne pripada, strukturalno, okružujućim paragrafima - uvodne rečenice (pod)poglavlja, rečenice koje predstavljaju zasebnu tematsku celinu - korekcije nisu vršene}
 
 \section{Sitne primedbe}
 3. strana:\\
@@ -63,6 +46,7 @@ Na mnogim mestima paragrafi sadrže samo jednu rečenicu. Potrebno je restruktur
 \odgovor {Pomenuta greška je ispravljena.}\\
 7. strana:\\
 - U poglavlju 2.2.3. naslove faza bi trebalo istaći u odnosu na ostatk teksta (npr. bold ili slično)
+\odgovor {Naslovi faza su istaknuti bold tekstom}
 
 9. strana:\\
 - greška: ugnežđene umesto ugneždene
@@ -77,6 +61,7 @@ Na mnogim mestima paragrafi sadrže samo jednu rečenicu. Potrebno je restruktur
 Rad dobro predstavlja osnove kvantnog računarstva i funkcionalne programske jezike na primeru jezika Quipper.
 \item Da li je nešto važno propušteno?\\
 Trebalo da se posveti više pažnje benefitu i prednostima kvantnog računarstva.
+\odgovor {Potencijalni benefiti kvantnog računarstva su kompleksna tema u koju nismo hteli da dublje zalazimo iz prostornih razloga (već imamo primedbu na obim rada)}
 \item Da li ima suštinskih grešaka i propusta?\\
 Nisu primećeni značajniji propusti.
 \item Da li je naslov rada dobro izabran?\\
@@ -95,8 +80,10 @@ U radu je navedena odgovarajuća literatura ali za ovakvu temu je potrebno više
 \odgovor {Namerno smo se ograničili na relativno malo literature jer je u pitanju tema o kojoj postoji dosta spekulacija i izvora koji nisu dovoljno pouzdani.}
 \item Da li su u radu reference korektno navedene?\\
 Navedene reference su korektne ali fale reference u prvom delu rada koji se odnosi na kvantno računarstvo. 
+\odgovor{ Informacije u uvodnom delu rada su opšte prirode, navedena referenca ([3]) iscrpno pokriva oblast kojom se uvod bavi }
 \item Da li je struktura rada adekvatna?\\
 Osim što radu fali uvod, strukura je adekvatna.
+\odgovor{Pretpostavljamo da recenzent misli na sažetak koji nismo hteli da nepotrebno proširujemo}
 \item Da li rad sadrži sve elemente propisane uslovom seminarskog rada (slike, tabele, broj strana...)?\\
 Rad ne sadrži tabelu i ne bi trebalo da prelazi 8 strana.
 \odgovor {Dodali smo tabelu, a što se tiče obima, naša je prvobitna ideja bila da ovo bude čisto teorijski rad, jer je vrlo teško napisati nešto smisleno na datu temu u obimu koji bi bio manji od našeg.}
@@ -117,7 +104,7 @@ Slika je adekvatna i dobrog kvaliteta ali bi trebalo da bude manje veličine, ne
 
 Veoma sam upućen u oblast.
 
-\chapter{Drugi recenzent \odgovor{--- ocena: } }
+\chapter{Drugi recenzent \odgovor{--- ocena: 2} }
 
 \section{O čemu rad govori?}
 % Напишете један кратак пасус у којим ћете својим речима препричати суштину рада (и тиме показати да сте рад пажљиво прочитали и разумели). Обим од 200 до 400 карактера.
@@ -134,7 +121,7 @@ primenjeni u praksi, i vrlo je fino i korektno obrađena. Nema velikih zamerki.
 % Напишете своја запажања на тему штампарских-стилских-језичких грешки
 Postoje određene sitne greške u kucanju koje bi trebalo ispraviti (poput kvadarata u odeljku 1.2.2 
 u prvoj formuli). Možda bi samo, radi potpunosti rada, bilo lepo dodati poneki primer, u vidu koda.\\
-\odgovor {Ispravljena greška nedostajućeg kvadrata u pomenutom odeljku; u samom radu nalazi se jedan jednostavan primer, a ostatak nije bio predviđen da se navodi u teorijskom delu.}
+\odgovor {Ispravljena greška nedostajućeg kvadrata u pomenutom odeljku; u samom radu nalazi se jedan jednostavan primer, a ostatak nije bio predviđen da se navodi u teorijskom delu. Propratni primeri za jezik Quipper su uključeni u konačnu verziju rada}
 \section{Provera sadržajnosti i forme seminarskog rada}
 % Oдговорите на следећа питања --- уз сваки одговор дати и образложење
 
@@ -242,6 +229,7 @@ Neophodno je bolje navođenje referenci u radu, naročito zbog toga što nekim s
 
 \item Da li je struktura rada adekvatna?\\
 Možda bi bilo bolje da se deo obuhvaćen Uvodom podeli u zasebne celine, inače je struktura adekvatna.
+\odgovor{Nismo sigurni kako bi dalje podelili delove uvoda, grupisani pojmovi su povezani i nismo sigurni da bi to doprinelo čitljivosti rada}
 \item Da li rad sadrži sve elemente propisane uslovom seminarskog rada (slike, tabele, broj strana...)?\\
 Rad ne sadrži tabele, ali sadrži slike, a broj strana je veći za jednu.\\
 \odgovor {Dodali smo tabelu, a što se tiče obima, naša je prvobitna ideja bila da ovo bude čisto teorijski rad, jer je vrlo teško napisati nešto smisleno na datu temu u obimu koji bi bio manji od našeg.}
