--- a/Seminarski.tex
+++ b/Seminarski.tex
@@ -129,13 +129,13 @@ Informacije o rezultatu se dobijaju operacijama merenja, oblika "izmeri kjubit q
 \subsection{Funkcionalno programiranje}
 \label{sec:funkcionalniprgjezici}
 
-Funkcionalno programiranje je programska paradigma u kojoj je osnovni način izračunavanja primena funkcija na argumente.\cite{funcPro}
+Funkcionalno programiranje je programska paradigma u kojoj je osnovni način izračunavanja primena funkcija na argumente.\cite[p. 3]{funcPro}
 Funkcionalni programski jezici su jezici koji podržavaju i ohrabruju primenu funkcionalne paradigme.
 Tradicionalni programski jezici se baziraju na ideji varijable kao promenljive veze između imena i vrednosti. Ovi jezici se nazivaju 
 imperativni jer se sastoje od niza komandi, koje čine dodele koje menjaju vrednost varijable.
 Funkcionalni jezici se baziraju na strukturiranim pozivima funkcija. Funkcionalni program se sastoji od poziva funkcije koja može da
 poziva druge funkcije:\\
-<function1>(<function2>(<function3> ... ) ... ))\cite{funcPro}
+<function1>(<function2>(<function3> ... ) ... ))\cite[p. 4]{funcPro}
 
 Među najbitnijim konceptima funkcionalnog programiranja su funkcije višeg reda i odsustvo nuspojava. \\
 Funkcije višeg reda su funkcije koje ili mogu za argumente uzeti druge funkcije ili kao svoj rezultat vraćaju funkciju, čime se omogućavaju ugnježdeni pozivi funkcija, odn. pojava koje se zove kompozicija funkcija.\\
