--- a/odg.tex
+++ b/odg.tex
@@ -188,7 +188,7 @@ Rad govori o kvantnom programiranju, dajući koristan uvod u kvantno računarstv
 
 \section{Krupne primedbe i sugestije}
 Jedina velika zamerka jeste nenavođenje referenci u celom radu, nego samo na nekim mestima. \\
-\odgovor { Ipak, uvažili ovu sugestiju i dodali reference na značajnijim mestima.}
+\odgovor { Uvažili smo ovu sugestiju i dodali reference na nekoliko najvažnijih mesta, jer da smo bili potpuno dosledni reference bismo prečesto navodili. }
 
 % Напишете своја запажања и конструктивне идеје шта у раду недостаје и шта би требало да се промени-измени-дода-одузме да би рад био квалитетнији.
 
