--- a/odg.tex
+++ b/odg.tex
@@ -66,7 +66,7 @@ Trebalo da se posveti više pažnje benefitu i prednostima kvantnog računarstva
 Nisu primećeni značajniji propusti.
 \item Da li je naslov rada dobro izabran?\\
 Naslov nije formulisan, ostavljen je naslov teme.
-\odgovor {Nije nam ni palo na pamet da naslov rada bude drugačiji od naslova teme, jer je potpuno adekvatan samom radu.}
+\odgovor { Naslov rada je izmenjen. }
 \item Da li sažetak sadrži prave podatke o radu?\\
 Sažetak ne sadrži dovoljno informacija.
 \odgovor {Mišljenja smo da sažetak treba da sadrži samu suštinu rada i da ne zalazi u detalje, što i jeste slučaj.}
@@ -86,7 +86,7 @@ Osim što radu fali uvod, strukura je adekvatna.
 \odgovor{Pretpostavljamo da recenzent misli na sažetak koji nismo hteli da nepotrebno proširujemo}
 \item Da li rad sadrži sve elemente propisane uslovom seminarskog rada (slike, tabele, broj strana...)?\\
 Rad ne sadrži tabelu i ne bi trebalo da prelazi 8 strana.
-\odgovor {Dodali smo tabelu, a što se tiče obima, naša je prvobitna ideja bila da ovo bude čisto teorijski rad, jer je vrlo teško napisati nešto smisleno na datu temu u obimu koji bi bio manji od našeg.}
+\odgovor {Naša je prvobitna ideja bila da ovo bude čisto teorijski rad, jer je vrlo teško napisati nešto smisleno na datu temu u obimu koji bi bio manji od našeg. Što se tiče tabele jednostavno nismo našli odgovarajuće podatke koje bi mogli prikazati u obliku tabele. }
 \item Da li su slike i tabele funkcionalne i adekvatne?\\
 Slika je adekvatna i dobrog kvaliteta ali bi trebalo da bude manje veličine, nepotrebno zauzima veći deo strane.
 \odgovor {Veličina slike je smanjena.}
@@ -232,10 +232,10 @@ Možda bi bilo bolje da se deo obuhvaćen Uvodom podeli u zasebne celine, inače
 \odgovor{Nismo sigurni kako bi dalje podelili delove uvoda, grupisani pojmovi su povezani i nismo sigurni da bi to doprinelo čitljivosti rada}
 \item Da li rad sadrži sve elemente propisane uslovom seminarskog rada (slike, tabele, broj strana...)?\\
 Rad ne sadrži tabele, ali sadrži slike, a broj strana je veći za jednu.\\
-\odgovor {Dodali smo tabelu, a što se tiče obima, naša je prvobitna ideja bila da ovo bude čisto teorijski rad, jer je vrlo teško napisati nešto smisleno na datu temu u obimu koji bi bio manji od našeg.}
+\odgovor {Naša je prvobitna ideja bila da ovo bude čisto teorijski rad, jer je vrlo teško napisati nešto smisleno na datu temu u obimu koji bi bio manji od našeg. Što se tiče tabele jednostavno nismo našli odgovarajuće mesto i podatke koje bi mogli prikazati u obliku tabele.}
 \item Da li su slike i tabele funkcionalne i adekvatne?\\
 Slika jeste adekvatna, a rad ne sadrži tabele.\\
-\odgovor {Dodali smo tabelu.}
+\odgovor {Obrazloženje dato u prethodnom odgovoru.}
 \end{enumerate}
 
 \section{Ocenite sebe}
@@ -323,7 +323,7 @@ Struktura rada je adekvatna.
 
 \item Da li rad sadrži sve elemente propisane uslovom seminarskog rada (slike, tabele, broj strana...)?\\
 Rad ne sadrži nikakve tabele.
-\odgovor {Ovo su svi recenzenti uočili i ispravili smo taj nedostatak.}
+\odgovor { Jednostavno nismo našli odgovarajuće podatke koje bi mogli prikazati u obliku tabele.}
 
 \item Da li su slike i tabele funkcionalne i adekvatne?\\
 Slika je na pravmom mestu, lepo opisuje ono što je napisano u tekstu
