--- a/odg.tex
+++ b/odg.tex
@@ -180,7 +180,7 @@ Kvantni računari možda jesu budućnost ali to je tehnologija koja se tek razvi
 
 
 
-\chapter{Treći recenzent \odgovor{--- ocena:} }
+\chapter{Treći recenzent \odgovor{--- ocena: 3} }
 
 \section{O čemu rad govori?}
 Rad govori o kvantnom programiranju, dajući koristan uvod u kvantno računarstvo i funkcionalno programiranje, opisujući efekte kvantne mehanike i njene prednosti pri konstrukciji računara, pojmove i koncepte kvantnog računarstva i osnove funkcionalne paradigme. Rad se zatim fokusira na funkcionalno kvantno programiranje kroz dva opširna primera programskih jezika.
