--- a/Seminarski.tex
+++ b/Seminarski.tex
@@ -148,7 +148,7 @@ zadržavajući dodelu vrednosti promenljivoj. Glavna struktura podataka u Lisp-u
 \section{Funkcionalni programski jezici za kvantno programiranje}
 \label{sec:funcprl_qp}
 
-\subsection{QFC i QPL}\cite{qfc}
+\subsection{QFC i QPL}
 \label{sec:qfc_qml}
 
 QFC ( \emph{eng}. Quantum Flow Charts) i QPL ( \emph{eng}. Quantum Programming Language) su dva blisko povezana jezika čiji je tvorac Peter Selinger.  Pristup programiranju u njima se može sumirati na sledeci način: "kvantni podaci, klasična kontrola" \cite[p. 1]{qfc}. Postoje dva načina sintaksnog predstavljanja kvantnih programa: grafička reprezentacija, u vidu grafikona protoka, i tekstualna. Izbor između te dve sintakse je pitanje ukusa, jer su međusobno ekvivalentne. \cite[p. 2]{qfc} Dva osnovna načina manipulacije qubit- ovima: unitarne transformacije i merenja. Klasični kontroler komunicira sa kvantnim uređajem šaljući mu niz instrukcija koje kvantni računar zatim izvršava. 
