--- a/odg.tex
+++ b/odg.tex
@@ -275,9 +275,9 @@ Uvođenje novog pojma QRAM nema zatvorenu zagradu.\\
 \item U poglavlju 1.3 ostavljeno je mesto za referencu ali referanca nije ubačena.
 \odgovor {Kritika je tačna, referenca je ubačena.}
 \item Poglavlje 2 nema tekst, odmah se kreće sa poglavljem 2.1.
-
+\odgovor {Nismo našli za potrebno da bilo šta dodajemo u tom delu teksta jer smo funkcionalne jezike i kvanto računarstvo u prethodnim poglavljima objasnili.}
 \item U poglavlju 2.1 postoji referenca za koju ne postoji tekst??
-%ovde je dodavanje reference valjda dovoljno da reši problem. Mislio sam da je već bila tamo ... 
+\odgovor {To je trebala biti referenca koja se odnosi na celo poglavlje, ali smo ipak umesto nje dodali više preciznijih referenci.}
 \item Na strani 6 postoji u tekstu referenca na sliku no ona nije uvezana.\\
 \odgovor {Pošto je navedena jedna slika u celom radu, nismo videli potrebu da preciziramo koja je slika u pitanju, ali ipak smo uvažili i ovu sugestiju.}
 \item Na strani 6 u blizini formule rečenica kreće sa ``Npr., ...``. Mislim da je lepše napisati to ``Na primer, ...``. U istoj rečenici tačku treba staviti pored formule ili je ne stavljati uopšte. Mislim da ne treba da krene novi red sa tačkom.
