--- a/odg.tex
+++ b/odg.tex
@@ -194,7 +194,7 @@ Jedina velika zamerka jeste nenavođenje referenci u celom radu, nego samo na ne
 
 \section{Sitne primedbe}
 U radu postoji nekoliko malih gramatičkih  i štamparskih grešaka, a na više mesta i nepotrebne podele na pasuse. Takođe, bilo bi dobro prilagoditi terminologiju čitaocima i podneblju, kao što je slučaj sa terminima "nus-pojava" (bočni efekat) i "kjubit" (kubit).\\
-\odgovor {Podela na pasuse je izmenjena; koliko znamo, termin nuspojava je reč srpskog jezika, tako da ne bi trebalo biti problema sa razumevanjem te reči. Ali smo kasnije saznali da je njen pravilan zapis bez crtice, tako da smo to izmenili. Što se tiče termina 'kjubit', postoji mogućnost da se ona navodi onako kako se piše na engleskom jeziku (za šta, po nama, nema nikakve potrebe, pošto je rad pisan na srpskom) ili da se piše onako kako se čita (što je rešenje koje smo mi odabrali).}
+\odgovor {Podela na pasuse je izmenjena; koliko znamo, termin nuspojava je reč srpskog jezika, tako da ne bi trebalo biti problema sa njenim razumevanjem. Ali smo kasnije saznali da je njen pravilan zapis bez crtice, tako da smo to izmenili. Što se tiče termina 'kjubit', postoji mogućnost da se ona navodi onako kako se piše na engleskom jeziku (za šta, po nama, nema nikakve potrebe, pošto je rad pisan na srpskom) ili da se piše onako kako se čita (što je rešenje koje smo mi odabrali).}
 
 % Напишете своја запажања на тему штампарских-стилских-језичких грешки
 
