--- a/odg.tex
+++ b/odg.tex
@@ -232,7 +232,7 @@ Možda bi bilo bolje da se deo obuhvaćen Uvodom podeli u zasebne celine, inače
 \odgovor{Nismo sigurni kako bi dalje podelili delove uvoda, grupisani pojmovi su povezani i nismo sigurni da bi to doprinelo čitljivosti rada}
 \item Da li rad sadrži sve elemente propisane uslovom seminarskog rada (slike, tabele, broj strana...)?\\
 Rad ne sadrži tabele, ali sadrži slike, a broj strana je veći za jednu.\\
-\odgovor {Naša je prvobitna ideja bila da ovo bude čisto teorijski rad, jer je vrlo teško napisati nešto smisleno na datu temu u obimu koji bi bio manji od našeg. Što se tiče tabele jednostavno nismo našli odgovarajuće mesto i podatke koje bi mogli prikazati u obliku tabele.}
+\odgovor {Naša je prvobitna ideja bila da ovo bude čisto teorijski rad, jer je vrlo teško napisati nešto smisleno na datu temu u obimu koji bi bio manji od našeg. Što se tiče tabele jednostavno nismo našli odgovarajuće podatke koje bi mogli prikazati u obliku tabele.}
 \item Da li su slike i tabele funkcionalne i adekvatne?\\
 Slika jeste adekvatna, a rad ne sadrži tabele.\\
 \odgovor {Obrazloženje dato u prethodnom odgovoru.}
