--- a/seminarski.bib
+++ b/seminarski.bib
@@ -48,3 +48,10 @@ url = {http://dx.doi.org/10.1017/s0960129504004256},
 volume = {14},
 year = {2004}
 }
+
+@book{funcPro,    
+    author = {Greg Michaelson},    
+    publisher = {Dover Publications},
+    title = {{AN INTRODUCTION TO FUNCTIONAL PROGRAMMING THROUGH LAMBDA CALCULUS}},
+    year = {2011}
+}
